--- a/portfolio.html
+++ b/portfolio.html
@@ -132,257 +132,257 @@
 
     <!--=================start main=================-->
     <main>
-      <!-- <section class="section">
+      <section class="section">
         <div class="container">
-          <h1 class="visually-hidden">Проекты</h1> -->
+          <h1 class="visually-hidden">Проекты</h1>
 
           <!-- filter -->
-          <!-- <ul class="filter-list list">
-            <li class="filter-list-item">
-              <button class="filter-list-button" type="button">Все</button>
+          <ul class="filter__list list">
+            <li class="filter__item">
+              <button class="filter__button" type="button">Все</button>
             </li>
-            <li class="filter-list-item">
-              <button class="filter-list-button" type="button">
+            <li class="filter__item">
+              <button class="filter__button" type="button">
                 Веб-сайты
               </button>
             </li>
-            <li class="filter-list-item">
-              <button class="filter-list-button" type="button">
+            <li class="filter__item">
+              <button class="filter__button" type="button">
                 Приложения
               </button>
             </li>
-            <li class="filter-list-item">
-              <button class="filter-list-button" type="button">Дизайн</button>
+            <li class="filter__item">
+              <button class="filter__button" type="button">Дизайн</button>
             </li>
-            <li class="filter-list-item">
-              <button class="filter-list-button" type="button">
+            <li class="filter__item">
+              <button class="filter__button" type="button">
                 Маркетинг
               </button>
             </li>
-          </ul> -->
+          </ul>
 
           <!-- projects -->
-          <!-- <ul class="projects-list list">
-            <li class="projects-list-item">
-              <a class="projects-list-link link" href="">
-                <div class="projects-list-link-img">
+          <ul class="projects__list list">
+            <li class="projects__item">
+              <a class="projects__link link" href="">
+                <div class="projects__link-img">
                   <img
                     src="./images/portfolio/project1.jpg"
                     alt="открытый ноутбук"
                     width="370"
                     height="294"
                   />
-                  <p class="overlay">
+                  <p class="projects__overlay">
                     Технокряк это современная площадка распространения
                     коронавируса. Компании используют эту платформу для
                     цифрового шпионажа и атак на защищённые сервера конкурентов.
                   </p>
                 </div>
-                <div class="project-description">
-                  <h2 class="projects-item-title">Технокряк</h2>
-                  <p class="projects-item-text">Веб-сайт</p>
+                <div class="project__description">
+                  <h2 class="projects__item-title">Технокряк</h2>
+                  <p class="projects__item-text">Веб-сайт</p>
                 </div>
               </a>
             </li>
 
-            <li class="projects-list-item">
-              <a class="projects-list-link link" href="">
-                <div class="projects-list-link-img">
+            <li class="projects__item">
+              <a class="projects__link link" href="">
+                <div class="projects__link-img">
                   <img
                     src="./images/portfolio/project2.jpg"
                     alt="два баскетболиста с мячом"
                     width="370"
                     height="294"
                   />
-                  <p class="overlay">
+                  <p class="projects__overlay">
                     Lorem ipsum dolor sit amet consectetur, adipisicing elit.
                     Quas, ab voluptatibus mollitia maxime maiores, quasi atque
                     sit nihil quisquam totam obcaecati delectus. Dolorum, magni
                     aspernatur sapiente animi repellat omnis consectetur.
                   </p>
                 </div>
-                <div class="project-description">
-                  <h2 class="projects-item-title">
+                <div class="project__description">
+                  <h2 class="projects__item-title">
                     Постер <span lang="en">New Orlean vs Golden Star</span>
                   </h2>
-                  <p class="projects-item-text">Дизайн</p>
+                  <p class="projects__item-text">Дизайн</p>
                 </div>
               </a>
             </li>
 
-            <li class="projects-list-item">
-              <a class="projects-list-link link" href="">
-                <div class="projects-list-link-img">
+            <li class="projects__item">
+              <a class="projects__link link" href="">
+                <div class="projects__link-img">
                   <img
                     src="./images/portfolio/project3.jpg"
                     alt="логотип ресторана"
                     width="370"
                     height="294"
                   />
-                  <p class="overlay">
+                  <p class="projects__overlay">
                     Lorem ipsum dolor sit amet consectetur, adipisicing elit.
                     Quas, ab voluptatibus mollitia maxime maiores, quasi atque
                     sit nihil quisquam totam obcaecati delectus. Dolorum, magni
                     aspernatur sapiente animi repellat omnis consectetur.
                   </p>
                 </div>
-                <div class="project-description">
-                  <h2 class="projects-item-title">Ресторан Seafood</h2>
-                  <p class="projects-item-text">Приложение</p>
+                <div class="project__description">
+                  <h2 class="projects__item-title">Ресторан Seafood</h2>
+                  <p class="projects__item-text">Приложение</p>
                 </div>
               </a>
             </li>
 
-            <li class="projects-list-item">
-              <a class="projects-list-link link" href="">
-                <div class="projects-list-link-img">
+            <li class="projects__item">
+              <a class="projects__link link" href="">
+                <div class="projects__link-img">
                   <img
                     src="./images/portfolio/project4.jpg"
                     alt="наушники"
                     width="370"
                     height="294"
                   />
-                  <p class="overlay">
+                  <p class="projects__overlay">
                     Lorem ipsum dolor sit amet consectetur, adipisicing elit.
                     Quas, ab voluptatibus mollitia maxime maiores, quasi atque
                     sit nihil quisquam totam obcaecati delectus. Dolorum, magni
                     aspernatur sapiente animi repellat omnis consectetur.
                   </p>
                 </div>
-                <div class="project-description">
-                  <h2 class="projects-item-title">
+                <div class="project__description">
+                  <h2 class="projects__item-title">
                     Проект <span lang="en">Prime </span>
                   </h2>
-                  <p class="projects-item-text">Маркетинг</p>
+                  <p class="projects__item-text">Маркетинг</p>
                 </div>
               </a>
             </li>
 
-            <li class="projects-list-item">
-              <a class="projects-list-link link" href="">
-                <div class="projects-list-link-img">
+            <li class="projects__item">
+              <a class="projects__link link" href="">
+                <div class="projects__link-img">
                   <img
                     src="./images/portfolio/project5.jpg"
                     alt="две коробочки"
                     width="370"
                     height="294"
                   />
-                  <p class="overlay">
+                  <p class="projects__overlay">
                     Lorem ipsum dolor sit amet consectetur, adipisicing elit.
                     Quas, ab voluptatibus mollitia maxime maiores, quasi atque
                     sit nihil quisquam totam obcaecati delectus. Dolorum, magni
                     aspernatur sapiente animi repellat omnis consectetur.
                   </p>
                 </div>
-                <div class="project-description">
-                  <h2 class="projects-item-title">
+                <div class="project__description">
+                  <h2 class="projects__item-title">
                     Проект <span lang="en">Boxes</span>
                   </h2>
-                  <p class="projects-item-text">Приложение</p>
+                  <p class="projects__item-text">Приложение</p>
                 </div>
               </a>
             </li>
 
-            <li class="projects-list-item">
-              <a class="projects-list-link link" href="">
-                <div class="projects-list-link-img">
+            <li class="projects__item">
+              <a class="projects__link link" href="">
+                <div class="projects__link-img">
                   <img
                     src="./images/portfolio/project6.jpg"
                     alt="монитор"
                     width="370"
                     height="294"
                   />
-                  <p class="overlay">
+                  <p class="projects__overlay">
                     Lorem ipsum dolor sit amet consectetur, adipisicing elit.
                     Quas, ab voluptatibus mollitia maxime maiores, quasi atque
                     sit nihil quisquam totam obcaecati delectus. Dolorum, magni
                     aspernatur sapiente animi repellat omnis consectetur.
                   </p>
                 </div>
-                <div class="project-description">
-                  <h2 class="projects-item-title" lang="en">
+                <div class="project__description">
+                  <h2 class="projects__item-title" lang="en">
                     Inspiration has no Borders
                   </h2>
-                  <p class="projects-item-text">Веб-сайт</p>
+                  <p class="projects__item-text">Веб-сайт</p>
                 </div>
               </a>
             </li>
 
-            <li class="projects-list-item">
-              <a class="projects-list-link link" href="">
-                <div class="projects-list-link-img">
+            <li class="projects__item">
+              <a class="projects__link link" href="">
+                <div class="projects__link-img">
                   <img
                     src="./images/portfolio/project7.jpg"
                     alt="открытая книга"
                     width="370"
                     height="294"
                   />
-                  <p class="overlay">
+                  <p class="projects__overlay">
                     Lorem ipsum dolor sit amet consectetur, adipisicing elit.
                     Quas, ab voluptatibus mollitia maxime maiores, quasi atque
                     sit nihil quisquam totam obcaecati delectus. Dolorum, magni
                     aspernatur sapiente animi repellat omnis consectetur.
                   </p>
                 </div>
-                <div class="project-description">
-                  <h2 class="projects-item-title">
+                <div class="project__description">
+                  <h2 class="projects__item-title">
                     Издание <span lang="en">Limited Edition</span>
                   </h2>
-                  <p class="projects-item-text">Дизайн</p>
+                  <p class="projects__item-text">Дизайн</p>
                 </div>
               </a>
             </li>
 
-            <li class="projects-list-item">
-              <a class="projects-list-link link" href="">
-                <div class="projects-list-link-img">
+            <li class="projects__item">
+              <a class="projects__link link" href="">
+                <div class="projects__link-img">
                   <img
                     src="./images/portfolio/project8.jpg"
                     alt="этикетка"
                     width="370"
                     height="294"
                   />
-                  <p class="overlay">
+                  <p class="projects__overlay">
                     Lorem ipsum dolor sit amet consectetur, adipisicing elit.
                     Quas, ab voluptatibus mollitia maxime maiores, quasi atque
                     sit nihil quisquam totam obcaecati delectus. Dolorum, magni
                     aspernatur sapiente animi repellat omnis consectetur.
                   </p>
                 </div>
-                <div class="project-description">
-                  <h2 class="projects-item-title">
+                <div class="project__description">
+                  <h2 class="projects__item-title">
                     Проект <span lang="en">LAB</span>
                   </h2>
-                  <p class="projects-item-text">Маркетинг</p>
+                  <p class="projects__item-text">Маркетинг</p>
                 </div>
               </a>
             </li>
 
-            <li class="projects-list-item">
-              <a class="projects-list-link link" href="">
-                <div class="projects-list-link-img">
+            <li class="projects__item">
+              <a class="projects__link link" href="">
+                <div class="projects__link-img">
                   <img
                     src="./images/portfolio/project9.jpg"
                     alt="открытый ноутбук"
                     width="370"
                     height="294"
                   />
-                  <p class="overlay">
+                  <p class="projects__overlay">
                     Lorem ipsum dolor sit amet consectetur, adipisicing elit.
                     Quas, ab voluptatibus mollitia maxime maiores, quasi atque
                     sit nihil quisquam totam obcaecati delectus. Dolorum, magni
                     aspernatur sapiente animi repellat omnis consectetur.
                   </p>
                 </div>
-                <div class="project-description">
-                  <h2 class="projects-item-title" lang="en">
+                <div class="project__description">
+                  <h2 class="projects__item-title" lang="en">
                     Growing Business
                   </h2>
-                  <p class="projects-item-text">Приложение</p>
+                  <p class="projects__item-text">Приложение</p>
                 </div>
               </a>
             </li>
-          </ul> -->
+          </ul>
         </div>
       </section>
     </main>
