--- a/portfolio.html
+++ b/portfolio.html
@@ -178,7 +178,7 @@
                     цифрового шпионажа и атак на защищённые сервера конкурентов.
                   </p>
                 </div>
-                <div class="project__description">
+                <div class="projects__description">
                   <h2 class="projects__item-title">Технокряк</h2>
                   <p class="projects__item-text">Веб-сайт</p>
                 </div>
@@ -201,7 +201,7 @@
                     aspernatur sapiente animi repellat omnis consectetur.
                   </p>
                 </div>
-                <div class="project__description">
+                <div class="projects__description">
                   <h2 class="projects__item-title">
                     Постер <span lang="en">New Orlean vs Golden Star</span>
                   </h2>
@@ -226,7 +226,7 @@
                     aspernatur sapiente animi repellat omnis consectetur.
                   </p>
                 </div>
-                <div class="project__description">
+                <div class="projects__description">
                   <h2 class="projects__item-title">Ресторан Seafood</h2>
                   <p class="projects__item-text">Приложение</p>
                 </div>
@@ -249,7 +249,7 @@
                     aspernatur sapiente animi repellat omnis consectetur.
                   </p>
                 </div>
-                <div class="project__description">
+                <div class="projects__description">
                   <h2 class="projects__item-title">
                     Проект <span lang="en">Prime </span>
                   </h2>
@@ -274,7 +274,7 @@
                     aspernatur sapiente animi repellat omnis consectetur.
                   </p>
                 </div>
-                <div class="project__description">
+                <div class="projects__description">
                   <h2 class="projects__item-title">
                     Проект <span lang="en">Boxes</span>
                   </h2>
@@ -299,7 +299,7 @@
                     aspernatur sapiente animi repellat omnis consectetur.
                   </p>
                 </div>
-                <div class="project__description">
+                <div class="projects__description">
                   <h2 class="projects__item-title" lang="en">
                     Inspiration has no Borders
                   </h2>
@@ -324,7 +324,7 @@
                     aspernatur sapiente animi repellat omnis consectetur.
                   </p>
                 </div>
-                <div class="project__description">
+                <div class="projects__description">
                   <h2 class="projects__item-title">
                     Издание <span lang="en">Limited Edition</span>
                   </h2>
@@ -349,7 +349,7 @@
                     aspernatur sapiente animi repellat omnis consectetur.
                   </p>
                 </div>
-                <div class="project__description">
+                <div class="projects__description">
                   <h2 class="projects__item-title">
                     Проект <span lang="en">LAB</span>
                   </h2>
@@ -374,7 +374,7 @@
                     aspernatur sapiente animi repellat omnis consectetur.
                   </p>
                 </div>
-                <div class="project__description">
+                <div class="projects__description">
                   <h2 class="projects__item-title" lang="en">
                     Growing Business
                   </h2>
