адаптовано portfolio для desktop

--- a/portfolio.html
+++ b/portfolio.html
@@ -170,10 +170,19 @@
                   <picture>
                     <source
                       media="(min-width: 1200px)"
-                      srcset=""
+                      srcset="
+                        ./images/desktop/portfolio-desktop-img.webp    1x,
+                        ./images/desktop/portfolio-desktop-img@2x.webp 2x
+                      "
                       type="image/webp"
                     />
-                    <source media="(min-width: 1200px)" srcset="" />
+                    <source
+                      media="(min-width: 1200px)"
+                      srcset="
+                        ./images/desktop/portfolio-desktop-img.jpg    1x,
+                        ./images/desktop/portfolio-desktop-img@2x.jpg 2x
+                      "
+                    />
 
                     <source
                       media="(min-width: 768px)"
@@ -209,8 +218,6 @@
                     <img
                       src="./images/mobile/portfolio-img.jpg"
                       alt="открытый ноутбук"
-                      width="450"
-                      height="294"
                     />
                   </picture>
                   <p class="projects__overlay">
@@ -232,10 +239,19 @@
                   <picture>
                     <source
                       media="(min-width: 1200px)"
-                      srcset=""
+                      srcset="
+                        ./images/desktop/portfolio2-desktop-img.webp    1x,
+                        ./images/desktop/portfolio2-desktop-img@2x.webp 2x
+                      "
                       type="image/webp"
                     />
-                    <source media="(min-width: 1200px)" srcset="" />
+                    <source
+                      media="(min-width: 1200px)"
+                      srcset="
+                        ./images/desktop/portfolio2-desktop-img.jpg    1x,
+                        ./images/desktop/portfolio2-desktop-img@2x.jpg 2x
+                      "
+                    />
 
                     <source
                       media="(min-width: 768px)"
@@ -271,8 +287,6 @@
                     <img
                       src="./images/mobile/portfolio2-img.jpg"
                       alt="два баскетболиста с мячом"
-                      width="450"
-                      height="294"
                     />
                   </picture>
                   <p class="projects__overlay">
@@ -297,10 +311,19 @@
                   <picture>
                     <source
                       media="(min-width: 1200px)"
-                      srcset=""
+                      srcset="
+                        ./images/desktop/portfolio3-desktop-img.webp    1x,
+                        ./images/desktop/portfolio3-desktop-img@2x.webp 2x
+                      "
                       type="image/webp"
                     />
-                    <source media="(min-width: 1200px)" srcset="" />
+                    <source
+                      media="(min-width: 1200px)"
+                      srcset="
+                        ./images/desktop/portfolio3-desktop-img.jpg    1x,
+                        ./images/desktop/portfolio3-desktop-img@2x.jpg 2x
+                      "
+                    />
 
                     <source
                       media="(min-width: 768px)"
@@ -336,8 +359,6 @@
                     <img
                       src="./images/mobile/portfolio3-img.jpg"
                       alt="логотип ресторана"
-                      width="450"
-                      height="294"
                     />
                   </picture>
                   <p class="projects__overlay">
@@ -360,10 +381,19 @@
                   <picture>
                     <source
                       media="(min-width: 1200px)"
-                      srcset=""
+                      srcset="
+                        ./images/desktop/portfolio4-desktop-img.webp    1x,
+                        ./images/desktop/portfolio4-desktop-img@2x.webp 2x
+                      "
                       type="image/webp"
                     />
-                    <source media="(min-width: 1200px)" srcset="" />
+                    <source
+                      media="(min-width: 1200px)"
+                      srcset="
+                        ./images/desktop/portfolio4-desktop-img.jpg    1x,
+                        ./images/desktop/portfolio4-desktop-img@2x.jpg 2x
+                      "
+                    />
 
                     <source
                       media="(min-width: 768px)"
@@ -399,8 +429,6 @@
                     <img
                       src="./images/mobile/portfolio4-img.jpg"
                       alt="наушники"
-                      width="450"
-                      height="294"
                     />
                   </picture>
                   <p class="projects__overlay">
@@ -425,10 +453,19 @@
                   <picture>
                     <source
                       media="(min-width: 1200px)"
-                      srcset=""
+                      srcset="
+                        ./images/desktop/portfolio5-desktop-img.webp    1x,
+                        ./images/desktop/portfolio5-desktop-img@2x.webp 2x
+                      "
                       type="image/webp"
                     />
-                    <source media="(min-width: 1200px)" srcset="" />
+                    <source
+                      media="(min-width: 1200px)"
+                      srcset="
+                        ./images/desktop/portfolio5-desktop-img.jpg    1x,
+                        ./images/desktop/portfolio5-desktop-img@2x.jpg 2x
+                      "
+                    />
 
                     <source
                       media="(min-width: 768px)"
@@ -464,8 +501,6 @@
                     <img
                       src="./images/mobile/portfolio5-img.jpg"
                       alt="две коробочки"
-                      width="450"
-                      height="294"
                     />
                   </picture>
                   <p class="projects__overlay">
@@ -490,10 +525,19 @@
                   <picture>
                     <source
                       media="(min-width: 1200px)"
-                      srcset=""
+                      srcset="
+                        ./images/desktop/portfolio6-desktop-img.webp    1x,
+                        ./images/desktop/portfolio6-desktop-img@2x.webp 2x
+                      "
                       type="image/webp"
                     />
-                    <source media="(min-width: 1200px)" srcset="" />
+                    <source
+                      media="(min-width: 1200px)"
+                      srcset="
+                        ./images/desktop/portfolio6-desktop-img.jpg    1x,
+                        ./images/desktop/portfolio6-desktop-img@2x.jpg 2x
+                      "
+                    />
 
                     <source
                       media="(min-width: 768px)"
@@ -529,8 +573,6 @@
                     <img
                       src="./images/mobile/portfolio6-img.jpg"
                       alt="монитор"
-                      width="450"
-                      height="294"
                     />
                   </picture>
                   <p class="projects__overlay">
@@ -555,10 +597,19 @@
                   <picture>
                     <source
                       media="(min-width: 1200px)"
-                      srcset=""
+                      srcset="
+                        ./images/desktop/portfolio7-desktop-img.webp    1x,
+                        ./images/desktop/portfolio7-desktop-img@2x.webp 2x
+                      "
                       type="image/webp"
                     />
-                    <source media="(min-width: 1200px)" srcset="" />
+                    <source
+                      media="(min-width: 1200px)"
+                      srcset="
+                        ./images/desktop/portfolio7-desktop-img.jpg    1x,
+                        ./images/desktop/portfolio7-desktop-img@2x.jpg 2x
+                      "
+                    />
 
                     <source
                       media="(min-width: 768px)"
@@ -594,8 +645,6 @@
                     <img
                       src="./images/mobile/portfolio7-img.jpg"
                       alt="открытая книга"
-                      width="450"
-                      height="294"
                     />
                   </picture>
                   <p class="projects__overlay">
@@ -620,10 +669,19 @@
                   <picture>
                     <source
                       media="(min-width: 1200px)"
-                      srcset=""
+                      srcset="
+                        ./images/desktop/portfolio8-desktop-img.webp    1x,
+                        ./images/desktop/portfolio8-desktop-img@2x.webp 2x
+                      "
                       type="image/webp"
                     />
-                    <source media="(min-width: 1200px)" srcset="" />
+                    <source
+                      media="(min-width: 1200px)"
+                      srcset="
+                        ./images/desktop/portfolio8-desktop-img.jpg    1x,
+                        ./images/desktop/portfolio8-desktop-img@2x.jpg 2x
+                      "
+                    />
 
                     <source
                       media="(min-width: 768px)"
@@ -659,8 +717,6 @@
                     <img
                       src="./images/mobile/portfolio8-img.jpg"
                       alt="этикетка"
-                      width="450"
-                      height="294"
                     />
                   </picture>
                   <p class="projects__overlay">
@@ -685,10 +741,19 @@
                   <picture>
                     <source
                       media="(min-width: 1200px)"
-                      srcset=""
+                      srcset="
+                        ./images/desktop/portfolio9-desktop-img.webp    1x,
+                        ./images/desktop/portfolio9-desktop-img@2x.webp 2x
+                      "
                       type="image/webp"
                     />
-                    <source media="(min-width: 1200px)" srcset="" />
+                    <source
+                      media="(min-width: 1200px)"
+                      srcset="
+                        ./images/desktop/portfolio9-desktop-img.jpg    1x,
+                        ./images/desktop/portfolio9-desktop-img@2x.jpg 2x
+                      "
+                    />
 
                     <source
                       media="(min-width: 768px)"
@@ -724,8 +789,6 @@
                     <img
                       src="./images/mobile/portfolio9-img.jpg"
                       alt="открытый ноутбук"
-                      width="450"
-                      height="294"
                     />
                   </picture>
                   <p class="projects__overlay">
